Fixes the spacing on the homepage companies section. #44

--- a/app/assets/stylesheets/partials/_home.scss
+++ b/app/assets/stylesheets/partials/_home.scss
@@ -6,6 +6,8 @@
       padding-bottom: rem-calc(24);
       padding-left: rem-calc(64);
 
+      p { margin-bottom: rem-calc(24); }
+
       ul {
         max-width: rem-calc(900);
         margin: 0 auto;
